p3 - fix vertical alignment on landing page logo

--- a/p3/submission/css/index.css
+++ b/p3/submission/css/index.css
@@ -9,8 +9,8 @@
 
 #welcome {
 	width: 100%;
-	height: calc(100vh - 300px);
-	padding-top: 100px;
+	height: calc(100vh - 200px);
+	padding-top: 200px;
 }
 
 .section {
